--- a/notebook/ML_cup_gs_giacomo.ipynb
+++ b/notebook/ML_cup_gs_giacomo.ipynb
@@ -63,46 +63,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 6\u001b[0m\n\u001b[1;32m      2\u001b[0m output_fun \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124midentity\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m      3\u001b[0m relu_l2_small \u001b[38;5;241m=\u001b[39m create_stratified_topology([TR_INPUT,\u001b[38;5;241m16\u001b[39m, \u001b[38;5;241m16\u001b[39m,TR_OUTPUT], \n\u001b[1;32m      4\u001b[0m                                       [[\u001b[38;5;28;01mNone\u001b[39;00m,[]]]\u001b[38;5;241m*\u001b[39mTR_INPUT \u001b[38;5;241m+\u001b[39m [[hidden_fun, [\u001b[38;5;241m1\u001b[39m]]]\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m16\u001b[39m \u001b[38;5;241m+\u001b[39m [[hidden_fun, [\u001b[38;5;241m1\u001b[39m]]]\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m16\u001b[39m \u001b[38;5;241m+\u001b[39m [[output_fun, []]]\u001b[38;5;241m*\u001b[39mTR_OUTPUT)\n\u001b[0;32m----> 6\u001b[0m relu_l2_big \u001b[38;5;241m=\u001b[39m \u001b[43mcreate_stratified_topology\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[43mTR_INPUT\u001b[49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m20\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m20\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43mTR_OUTPUT\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[1;32m      7\u001b[0m \u001b[43m                                      \u001b[49m\u001b[43m[\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;28;43;01mNone\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m[\u001b[49m\u001b[43m]\u001b[49m\u001b[43m]\u001b[49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mTR_INPUT\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[43m[\u001b[49m\u001b[43mhidden_fun\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m]\u001b[49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m16\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[43m[\u001b[49m\u001b[43mhidden_fun\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m]\u001b[49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m16\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[43m[\u001b[49m\u001b[43moutput_fun\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[43m]\u001b[49m\u001b[43m]\u001b[49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mTR_OUTPUT\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/ML_Proj_NN/src/MyUtils.py:105\u001b[0m, in \u001b[0;36mcreate_stratified_topology\u001b[0;34m(layers, act_fun_list)\u001b[0m\n\u001b[1;32m    102\u001b[0m succ \u001b[38;5;241m=\u001b[39m [index_unit \u001b[38;5;241m+\u001b[39m layers[i] \u001b[38;5;241m+\u001b[39m l \u001b[38;5;28;01mfor\u001b[39;00m l \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(layers[i \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m])]\n\u001b[1;32m    104\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m j \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(layers[i]):\n\u001b[0;32m--> 105\u001b[0m     unit_act_fun \u001b[38;5;241m=\u001b[39m \u001b[43mact_fun_list\u001b[49m\u001b[43m[\u001b[49m\u001b[43mindex_unit\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mj\u001b[49m\u001b[43m]\u001b[49m[\u001b[38;5;241m0\u001b[39m]\n\u001b[1;32m    106\u001b[0m     act_args \u001b[38;5;241m=\u001b[39m act_fun_list[index_unit \u001b[38;5;241m+\u001b[39m j][\u001b[38;5;241m1\u001b[39m]\n\u001b[1;32m    108\u001b[0m     top[index_unit \u001b[38;5;241m+\u001b[39m j] \u001b[38;5;241m=\u001b[39m [unit_type \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mstr\u001b[39m(i), unit_act_fun, act_args, succ]\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
    "source": [
-    "hidden_len = 32\n",
-    "\n",
-    "hidden_fun = 'tanh'\n",
-    "output_fun = 'identity'\n",
-    "\n",
-    "tanh_l1 = create_stratified_topology([TR_INPUT,30,TR_OUTPUT], \n",
-    "                                      [[None,[]]]*TR_INPUT + [[hidden_fun, [1]]]*hidden_len + [[output_fun, []]]*TR_OUTPUT)\n",
-    "\n",
-    "hidden_fun = 'sigmoid'\n",
-    "output_fun = 'identity'\n",
-    "\n",
-    "sigmoid_l1 = create_stratified_topology([TR_INPUT,30,TR_OUTPUT], \n",
-    "                                      [[None,[]]]*TR_INPUT + [[hidden_fun, [1]]]*hidden_len + [[output_fun, []]]*TR_OUTPUT)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hidden_fun = 'tanh'\n",
-    "output_fun = 'identity'\n",
-    "\n",
-    "tanh_l2 = create_stratified_topology([TR_INPUT,16, 16,TR_OUTPUT], \n",
-    "                                      [[None,[]]]*TR_INPUT + [[hidden_fun, [1]]]*16 + [[hidden_fun, [1]]]*16 + [[output_fun, []]]*TR_OUTPUT)\n",
-    "\n",
     "hidden_fun = 'ReLU'\n",
     "output_fun = 'identity'\n",
-    "relu_l2 = create_stratified_topology([TR_INPUT,16, 16,TR_OUTPUT], \n",
-    "                                      [[None,[]]]*TR_INPUT + [[hidden_fun, [1]]]*16 + [[hidden_fun, [1]]]*16 + [[output_fun, []]]*TR_OUTPUT)"
+    "\n",
+    "relu_l2_big = create_stratified_topology([TR_INPUT,20, 20,TR_OUTPUT], \n",
+    "                                      [[None,[]]]*TR_INPUT + [[hidden_fun, [1]]]*20 + [[hidden_fun, [1]]]*20 + [[output_fun, []]]*TR_OUTPUT)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -117,12 +113,21 @@
     }
    ],
    "source": [
-    "NeuralNetwork.display_topology(relu_l2)"
+    "NeuralNetwork.display_topology(relu_l2_small)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "NeuralNetwork.display_topology(relu_l2_big)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -458,27 +463,31 @@
     "MS = ModelSelection('../data/gs_data/2l_relu.csv')\n",
     "\n",
     "hyperparam_grid = {\n",
-    "    'learning_rate':[0.01, 0.1, 0.3, 0.5],\n",
-    "    'lr_decay_tau':[200],\n",
-    "    'adamax' : [True, False],\n",
-    "    'adamax_learning_rate' : [0.01, 0.05, 0.1, 0.3],\n",
-    "    'exp_decay_rate_1':[0.9, 0.75],\n",
-    "    'exp_decay_rate_2':[0.999, 0.5],\n",
-    "    'alpha_momentum':[0, 0.5, 0.9],\n",
-    "    'lambda_tikhonov':[0.00001, 0.0001],\n",
-    "    'batch_size':[int(training_len/15)],\n",
+    "    'lambda_tikhonov':[0.00001, 0.000001],\n",
+    "    'batch_size':[int(training_len/10)],\n",
     "    'min_epochs': [100],\n",
     "    'max_epochs':[600],\n",
     "    'metrics':[[ErrorFunctions.mean_euclidean_error, ErrorFunctions.mean_squared_error]],\n",
     "    'error_increase_tolerance':[0.0001],\n",
     "    'patience':[10],\n",
-    "    'topology': [str(relu_l2)],\n",
+    "    'topology': [str(relu_l2_big), str(relu_l2_big)],\n",
+    "    \n",
+    "    'adamax' : [True, False],\n",
+    "    'adamax_learning_rate' : [0.005, 0.02, 0.03, 0.04],\n",
+    "    'exp_decay_rate_1':[0.6, 0.8],\n",
+    "    'exp_decay_rate_2':[0.999],\n",
+    "    \n",
+    "    'learning_rate':[0.005, 0.008, 0.02, 0.002],\n",
+    "    'lr_decay_tau':[200],\n",
+    "    'alpha_momentum':[0.1, 0.25, 0],\n",
+    "    \n",
+    "    'collect_data' : [True],\n",
     "}\n",
     "\n",
     "c1 = lambda x: x\n",
     "constr = {'adamax': (c1, ['learning_rate', 'alpha_momentum', 'lr_decay_tau'], ['adamax_learning_rate', 'exp_decay_rate_1', 'exp_decay_rate_2'])}\n",
     "\n",
-    "MS.grid_searchKF(tr_normalized, hyperparam_grid, constr, 3, 12, False)"
+    "MS.grid_searchKF(tr_normalized, hyperparam_grid, constr, 4, 12, False)"
    ]
   }
  ],
