--- a/notebook/ML_cup_gs_LEGENDARY_proves.ipynb
+++ b/notebook/ML_cup_gs_LEGENDARY_proves.ipynb
@@ -83,22 +83,14 @@
       "tot conf: 8\n",
       "remaining conf: 8\n",
       "tot conf to do: 8\n",
-      "pid: 67843  started new kfold 1 / 2\n",
-      "pid: 67871  started new kfold 1 / 2\n",
-      "pid: 67896  started new kfold 1 / 1\n",
-      "pid: 67927  started new kfold 1 / 1\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[5], line 20\u001b[0m\n\u001b[1;32m      2\u001b[0m MS\u001b[38;5;241m.\u001b[39mdefault_values[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmetrics\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m [ErrorFunctions\u001b[38;5;241m.\u001b[39mmean_euclidean_error, ErrorFunctions\u001b[38;5;241m.\u001b[39mmean_squared_error]\n\u001b[1;32m      3\u001b[0m hyperparam_grid \u001b[38;5;241m=\u001b[39m {\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlambda_tikhonov\u001b[39m\u001b[38;5;124m'\u001b[39m:[\u001b[38;5;241m0.0\u001b[39m],\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbatch_size\u001b[39m\u001b[38;5;124m'\u001b[39m:[\u001b[38;5;241m10\u001b[39m],\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     17\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtopology\u001b[39m\u001b[38;5;124m'\u001b[39m: [\u001b[38;5;28mstr\u001b[39m(sigmoid_l1)],\n\u001b[1;32m     18\u001b[0m }\n\u001b[0;32m---> 20\u001b[0m \u001b[43mMS\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgrid_searchKF\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtr_norm_df\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mvalues\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mhyperparam_grid\u001b[49m\u001b[43m,\u001b[49m\u001b[43m  \u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m6\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/ML_Proj_NN/src/ModelSelection.py:415\u001b[0m, in \u001b[0;36mModelSelection.grid_searchKF\u001b[0;34m(self, data_set, hyperparameters, k_folds, n_proc, recovery, constraints)\u001b[0m\n\u001b[1;32m    412\u001b[0m \u001b[38;5;66;03m# distribute equally the workload among the processes\u001b[39;00m\n\u001b[1;32m    413\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(n_proc): \n\u001b[1;32m    414\u001b[0m     \u001b[38;5;66;03m# to give some time to the machine (and not make orrible print at the start)\u001b[39;00m\n\u001b[0;32m--> 415\u001b[0m     \u001b[43mtime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msleep\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m    416\u001b[0m     start \u001b[38;5;241m=\u001b[39m end\n\u001b[1;32m    417\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m remainder \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m:\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "pid: 83313  started new kfold 1 / 1\n",
+      "pid: 83338  started new kfold 1 / 1\n",
+      "pid: 83369  started new kfold 1 / 1\n",
+      "pid:83397   started new kfold 1 / 1\n",
+      "pid: 83429  started new kfold 1 / 1\n",
+      "pid: 83457  started new kfold 1 / 1\n",
+      "pid: 83488  started new kfold 1 / 1\n",
+      "pid: 83513  started new kfold 1 / 1\n"
      ]
     }
    ],
@@ -106,12 +98,12 @@
     "MS = ModelSelection('../data/gs_data/1l_sigmoid_4_prove.csv')\n",
     "MS.default_values['metrics'] = [ErrorFunctions.mean_euclidean_error, ErrorFunctions.mean_squared_error]\n",
     "hyperparam_grid = {\n",
-    "    'lambda_tikhonov':[0.0],\n",
+    "    'lambda_tikhonov':[0.000001],\n",
     "    'batch_size':[10],\n",
     "    'min_epochs': [100],\n",
     "    'max_epochs':[400],\n",
     "    \n",
-    "    'adamax' : [True],\n",
+    "    'adamax' : [False],\n",
     "    'learning_rate':[0.005, 0.001, 0.0005, 0.002],\n",
     "    'lr_decay_tau':[250,300], #epochs\n",
     "    'alpha_momentum':[0.75],\n",
